2009-05-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* basic.cs: Add regression test for #506915.

2009-05-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to-ir.c (mono_method_to_ir): When doing the ldobj+stobj
	optimization we must check the bb of the first byte of stobj as
	it's the only one set in cil_offset_to_bb.

	Fixes #506915.	

2009-05-25  Zoltan Varga  <vargaz@gmail.com>

	* image-writer.c: Fix pointer directive on ppc64.

2009-05-24  Zoltan Varga  <vargaz@gmail.com>

	* image-writer.c (asm_writer_emit_section_change): Avoid using
	.bss subsections on ppc too.

2009-05-23  Zoltan Varga  <vargaz@gmail.com>

	* image-writer.c: Fix the definition of TARGET_ASM_....
	
	* image-writer.c: Fix the emission of assembler directives in the last
	change.

	* mini-ppc.c (mono_arch_emit_exceptions): Increase the size of the
	exception throwing code to accomodate ppc64.

	* tramp-ppc.c (mono_arch_get_nullified_class_init_trampoline): Increase the
	size to work on ppc64 too.

	* mini-ppc.h (MonoCompileArch): Enable static rgctx trampolines on ppc64
	too.

	* image-writer.c: Clean up the #ifdef hell a bit by adding defines for
	the assembler dialect instead of using platform specific defines.

2009-05-22  Geoff Norton  <gnorton@novell.com>

	* mini-arm.c (get_call_info): If a structure is split between the stack
	and argument registers, we should not advance the stack pointer by the entire
	native size, but just by the amount that spilled.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* mini-arm.c (get_call_info): Handle structures with alignment requirements
	correctly.

2009-05-21  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_extra_methods): Encode direct runtime invoke
	wrappers normally.
	
	* aot-compiler.c (add_extra_method): Fix up the collection of extra
	methods so wrapper don't get added twice.
	(add_generic_instances): Don't add methods of arrays.

	* generics.cs: Mark one test as !FULLAOT.

2009-05-21 Rodrigo Kumpera  <rkumpera@novell.com>
