@@ -1364,5 +1364,21 @@ ncells ) {
 		arr [0, 0] = 256f;
 		return arr [0, 0] == 256f ? 0 : 1;
 	}
+
+	//repro for #506915
+	struct Bug506915 { public int val; }
+	static int test_2_ldobj_stobj_optization (string[] args)
+	{
+		int i = 99;
+		var a = new Bug506915 ();
+		var b = new Bug506915 ();
+		if (i.GetHashCode () == 99)
+			i = 44;
+		var array = new Bug506915 [2];
+		array [0].val = 2;
+		array [1] = (i == 0) ? a : array [0];
+		
+		return array [1].val;
+	}
 }
 
