@@ -1,5 +1,9 @@
 2009-05-25 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* objects.cs: Move the previous test from basic.cs to here.
+
+2009-05-25 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* basic.cs: Add regression test for #506915.
 
 2009-05-25 Rodrigo Kumpera  <rkumpera@novell.com>
